[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/YouWin.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Background_Word.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/key_nothing_lives.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/EvilLaugh.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/YouWinMusic.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Fade in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Word:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 3.86375, 0.999998 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="YouWin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade in" = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Word" type="TextureRect" parent="CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="LaughSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="finished" from="LaughSound" to="." method="_on_LaughSound_finished"]
